<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp">

        <Button
            android:id="@+id/strategy_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/strategy_pattern"/>
        <Button
            android:id="@+id/observer_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/observer_pattern"/>
        <Button
            android:id="@+id/decorator_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/decorator_pattern"/>
        <Button
            android:id="@+id/factory_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/factory_pattern"/>
        <Button
            android:id="@+id/singlton_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/singleton_pattern"/>
        <Button
            android:id="@+id/command_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/command_pattern"/>
        <Button
            android:id="@+id/adapter_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adapter_pattern"/>
        <Button
            android:id="@+id/facade_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/facade_pattern"/>
        <Button
            android:id="@+id/template_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/template_pattern"/>
        <Button
            android:id="@+id/status_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/status_pattern"/>

    </LinearLayout>

</ScrollView>
